cp project/force-app/main/default/objects/Demand__c/Demand__c.object-meta.xml
<CustomObject>
    <description>Construction milestone demand notices and 30-day reminder clocks.</description>
    <label>Demand</label>
    <nameField>
        <displayFormat>DEM-{0000}</displayFormat>
        <label>Demand Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Demands</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>