cp project/force-app/main/default/objects/Demand__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Demands</relationshipLabel>
    <relationshipName>Demands</relationshipName>
    <type>Lookup</type>
</CustomField>