cp project/force-app/main/default/objects/Demand__c/fields/Construction_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Construction_Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Construction Milestone</label>
    <referenceTo>Construction_Milestone__c</referenceTo>
    <relationshipLabel>Demands</relationshipLabel>
    <relationshipName>Demands_Milestone</relationshipName>
    <type>Lookup</type>
</CustomField>