cp project/force-app/main/default/objects/Demand__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Customer</referenceTo>
    <relationshipLabel>Demands</relationshipLabel>
    <relationshipName>Demands_Customer</relationshipName>
    <type>Lookup</type>
</CustomField>