cp project/force-app/main/default/objects/Demand__c/fields/Demand_Amount__c.field-meta.xml
<CustomField>
    <fullName>Demand_Amount__c</fullName>
    <label>Demand Milestone Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>