cp project/force-app/main/default/objects/Demand__c/fields/Demand_Notice_Number__c.field-meta.xml
<CustomField>
    <fullName>Demand_Notice_Number__c</fullName>
    <label>Demand Notice Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>