cp project/force-app/main/default/objects/Demand__c/fields/Demand_Status__c.field-meta.xml
<CustomField>
    <fullName>Demand_Status__c</fullName>
    <label>Demand Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Issued</fullName>
                <default>true</default>
                <label>Issued (Day 0)</label>
            </value>
            <value>
                <fullName>Due</fullName>
            </value>
            <value>
                <fullName>Overdue</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
                <label>Paid in Full</label>
            </value>
            <value>
                <fullName>Auto-Cancelled</fullName>
                <label>Auto-Cancelled (Day 30)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>