cp project/force-app/main/default/objects/Demand__c/fields/Demand_Type__c.field-meta.xml
<CustomField>
    <fullName>Demand_Type__c</fullName>
    <label>Demand Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
                <default>true</default>
                <label>Individual</label>
            </value>
            <value>
                <fullName>Bulk</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>