cp project/force-app/main/default/objects/Demand__c/fields/Reminder_Stage__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Stage__c</fullName>
    <label>Reminder Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Day 0</fullName>
                <default>true</default>
                <label>Day 0</label>
            </value>
            <value>
                <fullName>Day 7</fullName>
            </value>
            <value>
                <fullName>Day 14</fullName>
            </value>
            <value>
                <fullName>Day 21</fullName>
            </value>
            <value>
                <fullName>Day 30</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Stopped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>