cp project/force-app/main/default/objects/Demand__c/fields/Total_Payable__c.field-meta.xml
<CustomField>
    <fullName>Total_Payable__c</fullName>
    <description>Total Payable = Milestone Amount + Previous Dues + Accrued Interest (Slide 15).</description>
    <label>Net Total Payable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>