cp project/force-app/main/default/objects/Demand__c/validationRules/Demand_Amount_Non_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Demand_Amount_Non_Negative</fullName>
    <active>true</active>
    <description>Demand Amount must be greater than zero.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(Demand_Amount__c)), Demand_Amount__c &lt;= 0)</errorConditionFormula>
    <errorDisplayField>Demand_Amount__c</errorDisplayField>
    <errorMessage>Demand Amount must be greater than zero.</errorMessage>
</ValidationRule>