cp project/force-app/main/default/objects/Demand__c/validationRules/Due_Date_Must_Be_Valid.validationRule-meta.xml
<ValidationRule>
    <fullName>Due_Date_Must_Be_Valid</fullName>
    <active>true</active>
    <description>Demand Due Date cannot be earlier than Demand Date.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(Due_Date__c)), NOT(ISBLANK(Demand_Date__c)), Due_Date__c &lt; Demand_Date__c)</errorConditionFormula>
    <errorDisplayField>Due_Date__c</errorDisplayField>
    <errorMessage>Demand Due Date cannot be earlier than Demand Date.</errorMessage>
</ValidationRule>